Committed last moment changes

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,31 +1,19 @@
-# Application
-APP_NAME="FasiAPI"
-DEBUG=true
+APP_NAME="FastAPI Backend"
+DEBUG=True
 HOST=0.0.0.0
 PORT=8000
-LOG_LEVEL=INFO
 
 # Security
 SECRET_KEY=your-secret-key-change-this
+ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# Database
-MONGODB_URI=mongodb://localhost:27017
-MONGODB_DB_NAME=fasi_api
 
 # CORS
-CORS_ORIGINS=http://localhost:3000,http://localhost:3001
-
-# AI Services
-AZURE_OPENAI_KEY=your_azure_openai_key_here
-AZURE_OPENAI_ENDPOINT=your_azure_openai_endpoint_here
-AZURE_OPENAI_DEPLOYMENT=gpt-35-turbo
-LAMAPARSE_API_KEY=your_lamaparse_api_key_here
-
-# File Upload
-MAX_FILE_SIZE=10485760
-UPLOAD_DIR=app/uploaded-files
-
-# Analysis
-ENABLE_AI_ANALYSIS=true
-ANALYSIS_TIMEOUT=300
+CORS_ORIGINS=["http://localhost:3000"]
+LAMAPARSE_API_KEY=
+AZURE_OPENAI_KEY=
+AZURE_OPENAI_ENDPOINT=
+AZURE_OPENAI_DEPLOYMENT=
+AZURE_OPENAI_API_VERSION=
+MONGODB_URI= 
