--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,16 +1,5 @@
-# Example environment variables
-# Copy this file to .env.local and fill in your values
-
 # API endpoints
-NEXT_PUBLIC_API_URL=https://api.example.com
-
-# Database
-DATABASE_URL=postgresql://user:password@localhost:5432/mydb
-
-# Authentication
+NEXT_PUBLIC_API_URL=http://localhost:8000
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=your-secret-key
-
-# Third-party services
-STRIPE_SECRET_KEY=
-STRIPE_PUBLIC_KEY=
+MONGODB_URI=
